src/objects/Download_Statistics__c.object
<CustomObject>
    <fields>
        <fullName>Content_Document_Id__c</fullName>
        <label>Content Document Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Name__c</fullName>
        <label>Content Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Size__c</fullName>
        <label>Content Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Content_Type__c</fullName>
        <label>Content Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Version_Id__c</fullName>
        <label>Content Version Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Downloaded_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Downloaded By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>WINatPOS_Download_Statistics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Downloaded_in_Country__c</fullName>
        <label>Downloaded in Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FileId</label>
        <referenceTo>File__c</referenceTo>
        <relationshipLabel>WINatPOS Download Statistics Lookup</relationshipLabel>
        <relationshipName>WINatPOS_Download_Statistics_Lookup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>File_Id__c</fullName>
        <label>File Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <label>WINatPOS Download Statistics</label>
    <nameField>
        <label>Download Statistics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WINatPOS Download Statistics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>